err/flask-east.err
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyJWT-1.5.3.dist-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_east-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jwt'...
Listing './lib/python3.5/site-packages/jwt/contrib'...
Listing './lib/python3.5/site-packages/jwt/contrib/algorithms'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mistune-0.8.3.dist-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
